Remove buttons from index -Change text on Actions dropdown menu

--- a/app/views/application/_dropdown.html.erb
+++ b/app/views/application/_dropdown.html.erb
@@ -1,5 +1,5 @@
 <div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Actions(ask)
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Actions
   <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <% actions.each do |ref| %>
