--- a/app/views/pgp_scores/edit.html.erb
+++ b/app/views/pgp_scores/edit.html.erb
@@ -1,69 +1,16 @@
 <%= link_to student_pgps_path(@pgp.student.id), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
-    </br>
+<%= form_for(@pgp_score, url: pgp_score_path(@pgp.id)) do |f| %>
 
-
-    <%= error_messages_for(@pgp) %> 
-    <%= form_for(@pgp, :url => pgp_path(@pgp.id), method: :patch ) do |f| %>
-
-     <table summary="pgp edit form">
-
-     <table summary="pgp scoring form">
-         
-
-        <caption>
-        <div <div class="header1 col-xl-12"> <%= "Edit Professional Growth Plan"  %> </div></br>
-        </caption>
+    <table summary="Edit PGP Score form fields">
         
-        <div>
-            <tr>
-                <th><%= "Goal:" %></th>
-                <td><%= "#{@pgp.goal_name}" %></td>
-            </tr>
-            
-            <tr>
-                <th><%= f.label(:description, "Goal Description: ") %></th>
-                <td><%= f.text_area(:description) %></td>
-            </tr>
-            
-            <tr>
-                <th><%= f.label(:plan, "Action Plan: ") %></th>
-                <td><%= f.text_area(:plan)%></td>
-            </tr>
-            
-        </div>
-        </table><br>
-        
-        <table>
-        <div>
-            <tr>
-                <th><%= f.label(@pgp_goal_score, "Score:")%></th>
-                <td><%= f.radio_button(:goal_score, 1) %>1</td>
-                <td><%= f.radio_button(:goal_score, 2) %>2</td>
-                <td><%= f.radio_button(:goal_score, 3) %>3</td>
-                <td><%= f.radio_button(:goal_score, 4) %>4</td>
-            </tr>
-        </div>
-        </table>
-        
-        <table>
-        <div>
-            <tr>
-                <th><%= f.label(:score_reason, "Reason(s) for score: ")%></th>
-                <td><%= f.text_area(:score_reason) %></td>
-            </tr>
-        </div>
-        </table>
-        
-        <tr>
-            <td>
-                <div class="form-buttons">
-                    <%= submit_tag("Submit") %>
-                </div>
-            </td>   
-        </tr> 
-        
-        
-    </table>
-    <% end %>
+	<%= render(partial: 'form', locals: {f: f}) %>
+	
+	<div class="form-buttons">
+    	<tr>
+    	    <td> <%= submit_tag("Edit Professonal Growth Plan Score") %> </td>
+        </tr>
+	</div>
+	
+<% end %>
