--- a/app/views/pgps/_form.html.erb
+++ b/app/views/pgps/_form.html.erb
@@ -7,7 +7,7 @@
         </tr>
   	  <tr>
   	    <th><%= f.label(:goal_name, "Goal") %></th>
-  	    <td><%= f.text_area(:goal_name) %></td>
+  	    <td><%= f.label("#{@pgp.goal_name}") %></td>
   	  </tr>
   
   	  <tr>
