--- a/app/views/pgp_scores/edit.html.erb
+++ b/app/views/pgp_scores/edit.html.erb
@@ -1,7 +1,7 @@
 <%= link_to student_pgps_path(@pgp.student.id), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
-<%= form_for(@pgp_score, url: pgp_score_path(@pgp.id)) do |f| %>
+<%= form_for(@pgp_score, url: pgp_score_path(@pgp_score.id)) do |f| %>
 
     <table summary="Edit PGP Score form fields">
         
