--- a/app/views/pgp_scores/index.html.erb
+++ b/app/views/pgp_scores/index.html.erb
@@ -31,7 +31,11 @@
                 <td> <%= pgp_score.goal_score %></td>
                 <td> <%= pgp_score.score_reason %></td>
                 <td> <%= pgp_score.created_at.strftime("%m/%d/%Y")%> </td>
+
+                <td>
+                   <%= link_to("Edit PGP Score", edit_pgp_score_path(@pgp.id), :class => "action details btn btn-info action-small issues") %>
+                </td>
               </tr>
-             <% end %>
+          <% end %>
         </table>
       </div>
