--- a/app/views/pgps/index.html.erb
+++ b/app/views/pgps/index.html.erb
@@ -47,7 +47,9 @@
               
               <%= link_to("View Scores", pgp_pgp_scores_path(pgp.id), :class => "action details btn btn-info action-small issues")%>
               <td>
-              <%= button_to(pgp_path(pgp.id), { class: "btn btn-default", method: :delete, data: {confirm: "Are you sure you want to delete this professional growth plan?"}} ) do %>
+                
+              <%= button_to(pgp_path(pgp.id), { class: "btn btn-default #{pgp.pgp_scores.size == 0 ? "" : "disabled"}",
+              method: :delete, data: {confirm: "Are you sure you want to delete this professional growth plan?"}}) do %>
                 <span class="glyphicon glyphicon-trash"></span>
               <% end %>
               </td>
