--- a/app/views/pgps/show.html.erb
+++ b/app/views/pgps/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to student_pgps_path(@student.AltID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+<%= link_to student_pgps_path(@pgp.student), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
 
@@ -6,7 +6,7 @@
   <caption>
     
     <div class="header1">
-      <%= "#{@first_name} #{@last_name}"%>
+      <%= "PGP details for #{@student.FirstName} #{@student.LastName}"%>
     </div>
 
     <div class="header2">
@@ -25,7 +25,5 @@
   </tr>
 
 </table></br>
-<table>
-   <%= link_to("Edit PGP", edit_pgp_path(@pgp.id), :class => "action details btn btn-info action-small issues")%>
-</table>
+
 
