--- a/app/views/pgp_scores/edit.html.erb
+++ b/app/views/pgp_scores/edit.html.erb
@@ -1,9 +1,8 @@
-<%= link_to student_pgps_path(@pgp.student.id), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+<%= link_to pgp_pgp_scores_path(@pgp_score.pgp.id), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
 <%= form_for(@pgp_score, url: pgp_score_path(@pgp_score.id)) do |f| %>
 
-    <table summary="Edit PGP Score form fields">
         
 	<%= render(partial: 'form', locals: {f: f}) %>
 	
