finish tests for baner_update mailers

--- a/app/views/banner_update_mailer/possible_drop.html.erb
+++ b/app/views/banner_update_mailer/possible_drop.html.erb
@@ -21,5 +21,10 @@ Dear <%= "#{@adv.first_name} #{@adv.last_name}" %>, </br>
   Programs: <%= @stu.programs.map{|p| p.EDSProgName}.join("; ") %>
 </p>
 
+<p>
+  Sincerly, </br>
+  Berea College Teacher Education Program
+</p>
+
 
 </body>
