Add sanitizing to model method import_create

--- a/app/views/student_scores/index.html.erb
+++ b/app/views/student_scores/index.html.erb
@@ -5,6 +5,7 @@
     Download:
     <%= link_to "CSV", assessment_version_student_scores_path(format: "csv") %>
     <%= link_to "Excel", assessment_version_student_scores_path(format: "xls") %>
+    <%= link_to "Blank Template", assessment_version_student_scores_path(format: "xlsx") %>
   </p>
     <div class="container">
       <table class="listing table table-striped" summary="Student Scores">
