--- a/app/views/student_scores/new.html.erb
+++ b/app/views/student_scores/new.html.erb
@@ -1,9 +1,16 @@
-<p>Please select the Assessment Version</p>
-<% actions =[] %>
+<div class="student scores index">
+  <p>
+    Please select the Assessment Version from the dropdown menu
+  <% actions =[] %>
+  
+  <% @versions.each do |ver| %>
+    <% actions.push({menu_name: "Version #{ver.version_num} of #{ver.assessment.name}" , 
+      link_url: assessment_version_student_scores_path(ver.id)}) %>
+  <% end %>
+  
+  <%= render(partial: 'dropdown', locals: {:actions => actions}) %>
 
-<% @versions.each do |ver| %>
-  <% actions.push({menu_name: "Version #{ver.version_num} of #{ver.assessment.name}" , 
-    link_url: assessment_version_student_scores_path(ver.id)}) %>
-<% end %>
-
-<%= render(partial: 'dropdown', locals: {:actions => actions}) %>
+  </p>
+    <br>
+    <%= link_to 'Update Current Template', "file:///app/views/student_scores/update.xls.erb" %>
+    <% end %>
