--- a/app/views/banner_update_mailer/update_done.html.erb
+++ b/app/views/banner_update_mailer/update_done.html.erb
@@ -4,7 +4,7 @@
 <body>
 
 <p>
-  Banner_update finished successfully at <%= @timestamp %> ith <%= @error_count %> caught errors. 
+  Banner_update finished successfully at <%= @timestamp %> with <%= @error_count %> caught errors. 
 </p>
 
 
