--- a/app/views/student_scores/new.html.erb
+++ b/app/views/student_scores/new.html.erb
@@ -12,5 +12,5 @@
 
   </p>
     <br>
-    <%= link_to 'Update Current Template', "file:///app/views/student_scores/update.xls.erb" %>
+    <%= link_to 'Update Current Template', assessment_version_update_path( :action => actions, :controller => "assessment_versions", :assessment_version_id => 'assessment_version_student_scores_path(ver.id)', format: "xls") %>
     </br>
