Added the groundwork for the import feature for FOI, including model actions, views, and controller actions.

--- a/app/views/fois/index.html.erb
+++ b/app/views/fois/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Form of Intention</h1>
+<h1>Forms of Intention</h1>
 
-<table id="products">
+<table id="fois">
   <tr>
     <th>First Name</th>
     <th>Last Name</th>
@@ -8,19 +8,16 @@
     <th>Major</th>
     <th>Seeking Cert.</th>
   </tr>
-<% @foi.each do |foi| %>
+<% @fois.each do |foi| %>
   <tr>
     <td><%= foi.student.FirstName %></td>
     <td><%= foi.student.LastName %></td>
-    <td><%= foi.student.Student_Bnum %></td>
+    <td><%= foi.student.Bnum %></td>
     <td><%= foi.student.CurrentMajor1%></td>
   </tr>
 <% end %>
 </table>
-
-<h2>Import FOIs</h2>
-
-<%= form_tag import_fois_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
-<% end %>
+  <%= form_tag import_fois_path, multipart: true do %>
+    <%= file_field_tag :file %>
+    <%= submit_tag "Import CSV" %>
+  <% end %>
