Create pending_student_scores table

--- a/app/views/student_scores/select_stu.html.erb
+++ b/app/views/student_scores/select_stu.html.erb
@@ -26,7 +26,7 @@
                     </td>
                     <td><%= score[0].assessment_item_id %></td>  <!--score[0] is a hash of all other score attributes-->
                     <td><%= ItemLevel.find(score[0].assessment_item_id).ord %></td>
-                    <>
+                    <td><%= ItemLevel%></td>
                 </tr>
                 <td><%score[1].each do |stu| %>
                 
