changed the logic for pulling in csv import data. Now calls in the correct column and needs work on adding all attributes from the csv into the foi table

--- a/app/views/fois/index.html.erb
+++ b/app/views/fois/index.html.erb
@@ -14,6 +14,7 @@
     <td><%= foi.student.LastName %></td>
     <td><%= foi.student.Bnum %></td>
     <td><%= foi.student.CurrentMajor1%></td>
+    <td><%= foi.seek_cert %></td>
   </tr>
 <% end %>
 </table>
