Work on scores_created view, displaying scores and pending created

--- a/app/views/student_scores/new.html.erb
+++ b/app/views/student_scores/new.html.erb
@@ -11,8 +11,8 @@
   <%= render(partial: 'dropdown', locals: {:actions => actions}) %>
 
   </p>
-    <br>
-    <%= link_to 'Update Current Template', assessment_version_student_scores_path(format: "xls") %>
-    <%= link_to "Blank Template", assessment_version_student_scores_path(format: "xls") %>
+    <!--<br>
+    <%#= link_to 'Update Current Template', assessment_version_student_scores_path(format: "xls") %>
+    <%#= link_to "Blank Template", assessment_version_student_scores_path(format: "xls") %>
     
-    </br>
+    </br>-->
