--- a/app/views/pending_student_scores/index.html.erb
+++ b/app/views/pending_student_scores/index.html.erb
@@ -1,2 +1,34 @@
-<h1>PendingStudentScores#create</h1>
-<p>Find me in app/views/pending_student_scores/index.html.erb</p>
+<% @page_title = "Student Scores" %>
+
+<div class="pending student score index">
+    <div class="container">
+      <table class="listing table table-striped" summary="Pending Scores">
+        <div class="row">          
+          <caption>
+            <div class="header1 col-xs-12">Version Scores</div></br>
+            <div class="header2 col-xs-12"><%= @scores.size %> found</div></br>     
+          </caption>
+        </div>
+          <tr class="header">
+            <th>Student</th>
+            <th>Assessment Item</th>
+            <th>Score</th>
+            <th>Score Description</th>
+          </tr>
+          <% @scores.each do |score| %>
+            <tr>
+              <td><%= Student.find(score.student_id).FirstName %>
+                <%= Student.find(score.student_id).LastName %></td>
+              <td><%= score.assessment_item_id %></td>
+              <td><%= score.item_level.ord %></td>
+              <td><%= score.item_level.level %></td>
+            </tr>
+          <% end %>
+          <tr>
+            <td>
+              <%= form_tag import_assessment_version_student_scores_path(@version.id), multipart: true do %>  
+                <%= file_field_tag :file %>
+                <%= submit_tag "Upload New Scores" %>
+              <% end %>  
+            </td>
+          </tr>
