Reports_controller fixed, working on display

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -2,9 +2,9 @@
 
 <!-- insert back button -->
 
-<div class="student report index">
+<div class="student reports index">
   <p>
     Download Student Information:
-    <%= link_to "Excel Spreadsheet", reports_index_path(format: "xls") %>
+    <%= link_to "Excel Spreadsheet", report_index_path(format: "xls") %>
   </p>
    </div>
