--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,15 +1,24 @@
 <% @page_title = "Students" %>
 
-<%= paginate @students %>
-<div class="students index">
 
+<div class="students index">
+  <div class="row">
+    <%= render partial: "next_prev", locals: {:prev_page => @prev_page,
+                                              :next_page => @next_page} %>
+
+    <%= render partial: "search", locals: {:path => params, :resource_name => @controller} %>
+  </div>
     <div class="container">
       <table class="listing table table-striped" summary="Student list">
+
+
+
         <div class="row">
           <caption>
             <div class="header1 col-xs-12">Students</div></br>
-            <div class="header2 col-xs-12"><%= @students.size %> found</div></br>
+            <div class="header2 col-xs-12"><%= @students.size %> found. (Page <%= @page_num %> of <%= @page_max %>) </div></br>
           </caption>
+
         </div>
           <tr class="header">
             <th>B#</th>
