--- a/app/views/pending_student_scores/index.html.erb
+++ b/app/views/pending_student_scores/index.html.erb
@@ -5,30 +5,23 @@
       <table class="listing table table-striped" summary="Pending Scores">
         <div class="row">          
           <caption>
-            <div class="header1 col-xs-12">Version Scores</div></br>
-            <div class="header2 col-xs-12"><%= @scores.size %> found</div></br>     
+            <div class="header1 col-xs-12">Pending Student Scores</div></br>
+            <div class="header2 col-xs-12"><%= @pending.size %> found</div></br>     
           </caption>
         </div>
           <tr class="header">
-            <th>Student</th>
+            <th>Assessment Version</th>
             <th>Assessment Item</th>
             <th>Score</th>
             <th>Score Description</th>
           </tr>
-          <% @scores.each do |score| %>
+          <% @pending.each do |score| %>
             <tr>
-              <td><%= Student.find(score.student_id).FirstName %>
-                <%= Student.find(score.student_id).LastName %></td>
+              <td><%= score.assessment_version_id %></td>
               <td><%= score.assessment_item_id %></td>
               <td><%= score.item_level.ord %></td>
               <td><%= score.item_level.level %></td>
+              <% pos_stu = score.find_stu %>
+              <td><%= render(partial: 'stu_dropdown', locals: {:students => pos_stu}) %></td>
             </tr>
           <% end %>
-          <tr>
-            <td>
-              <%= form_tag import_assessment_version_student_scores_path(@version.id), multipart: true do %>  
-                <%= file_field_tag :file %>
-                <%= submit_tag "Upload New Scores" %>
-              <% end %>  
-            </td>
-          </tr>
