--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,6 +5,6 @@
 <div class="student reports index">
   <p>
     Download Student Information:
-    <%= link_to "Excel Spreadsheet", report_index_path(format: "xls") %>
+    <%= link_to "Excel Spreadsheet", reports_path(format: "xls") %>
   </p>
    </div>
