--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -1,11 +1,11 @@
   <div class="container-fluid">
     <div class="navbar-header">
-      <span class="navbar-brand">Educaiton Studies Dashboard</span>
+      <span class="navbar-brand">Education Studies Dashboard</span>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to("Advisees", students_path) %></li>
       <li class="active"><%= link_to("Praxis Registration", new_praxis_result_path) %></li>
-      <li class = "dropdown active">        
+      <li class = "dropdown active">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Admissions/Exit <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><%= link_to("Admission to TEP", adm_tep_index_path) %></li>
@@ -18,9 +18,9 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Field Experience <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><%= link_to("Clinical Placements", clinical_assignments_path) %></li>
-          <li><%= link_to("Clinical Teachers", 
+          <li><%= link_to("Clinical Teachers",
           clinical_teachers_path) %></li>
-          <li><%= link_to("Clinical Sites", 
+          <li><%= link_to("Clinical Sites",
           clinical_sites_path) %></li>
         </ul>
       </li>
