finish testing praxis_update_mailer

--- a/app/views/praxis_result_mailer/email_advisor.html.erb
+++ b/app/views/praxis_result_mailer/email_advisor.html.erb
@@ -6,8 +6,8 @@ Dear <%= @adv.Salutation %>,
 
 <ol>
 
-<% @tets.each do |test| %>
-  <li><%= test.praxis_test.TestName %></li>
+<% @tests.each do |result| %>
+  <li><%= result.praxis_test.TestName %></li>
 <% end %>
 
 </ol>
