use student complete name in praxis email

--- a/app/views/praxis_result_mailer/email_student.html.erb
+++ b/app/views/praxis_result_mailer/email_student.html.erb
@@ -1,4 +1,4 @@
-Dear <%= @stu.PreferredFirst %>,
+Dear <%= @stu.name_readable %>,
 <p>Your recent Praxis scores came back. Here is a summary of your results:<br>
 
 <h2>Passing</h2>
